Rajout meta, groupement front

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -302,6 +302,14 @@ article
     display: flex;
     justify-content: space-between;
 }
+.front134
+{
+    font-family: 'Farsan', cursive;
+}
+.front2
+{
+    font-family: 'Crimson Pro', serif;
+}
 /*--------------------MENU 1--------------------------
 -------------------------------------------------------
 -------------------------------------------------------
@@ -328,7 +336,6 @@ article
 {
     margin-top: -2px;
     color: rgb(85, 61, 30);
-    font-family: 'Farsan', cursive;
     background: linear-gradient(to top, rgb(85, 61, 30) 2px, transparent 3px) no-repeat;
     background-size: 0 100%;
     transition: background-size 0.3s;
@@ -351,7 +358,6 @@ article
 {
     color: rgb(85, 61, 30);
     font-size: 120%;
-    font-family: 'Farsan', cursive;
 }
 /*-----Footer-----*/
 .pieddepage
@@ -398,7 +404,6 @@ article
 {
     margin-top: -2px;
     color: rgb(243, 180, 43);
-    font-family: 'Crimson Pro', serif;
     background: linear-gradient(to top, rgb(243, 180, 43) 2px, transparent 3px) no-repeat;
     background-size: 0 100%;
     transition: background-size 0.3s;
@@ -411,7 +416,6 @@ article
 {
     margin-top: -2px;
     color: rgb(147, 82, 231);
-    font-family: 'Crimson Pro', serif;
     background: linear-gradient(to top, rgb(147, 82, 231) 2px, transparent 3px) no-repeat;
     background-size: 0 100%;
     transition: background-size 0.3s;
@@ -424,7 +428,6 @@ article
 {
     margin-top: -2px;
     color: rgb(78, 67, 233);
-    font-family: 'Crimson Pro', serif;
     background: linear-gradient(to top, rgb(78, 67, 233) 2px, transparent 3px) no-repeat;
     background-size: 0 100%;
     transition: background-size 0.3s;
@@ -436,17 +439,14 @@ article
 .colortext1menu2
 {
     color: rgb(243, 180, 43);
-    font-family: 'Crimson Pro', serif;
 }
 .colortext2menu2
 {
     color: rgb(147, 82, 231);
-    font-family: 'Crimson Pro', serif;
 }
 .colortext3menu2
 {
     color: rgb(78, 67, 233);
-    font-family: 'Crimson Pro', serif;
 }
 .trait1menu2-
 {
@@ -507,7 +507,6 @@ article
 .titresousmenu3-
 {
     margin-top: 3px;
-    font-family: 'Farsan', cursive;
     background: linear-gradient(to top, rgb(33, 30, 228) 2px, transparent 3px) no-repeat;
     background-size: 0 100%;
     transition: background-size 0.3s;
@@ -519,7 +518,6 @@ article
 .titresousmenu3--
 {
     margin-top: 3px;
-    font-family: 'Farsan', cursive;
     background: linear-gradient(to top, rgb(63, 129, 252) 2px, transparent 3px) no-repeat;
     background-size: 0 100%;
     transition: background-size 0.3s
@@ -531,7 +529,6 @@ article
 .titresousmenu3---
 {
     margin-top: 3px;
-    font-family: 'Farsan', cursive;
     background: linear-gradient(to top, rgb(63, 192, 252) 2px, transparent 3px) no-repeat;
     background-size: 0 100%;
     transition: background-size 0.3s;
@@ -542,7 +539,6 @@ article
 }
 .colortextemenu3
 {
-    font-family: 'Farsan', cursive;
     font-size: 120%;
 }
 .trait1menu3-
@@ -602,7 +598,6 @@ article
 .titresousmenu4
 {
     margin-top: 0px;
-    font-family: 'Farsan', cursive;
     background: linear-gradient(to top, rgb(97, 175, 52) 2px, transparent 3px) no-repeat;
     background-size: 0 100%;
     transition: background-size 0.3s;
@@ -613,7 +608,6 @@ article
 }
 .colortextemenu4
 {
-    font-family: 'Farsan', cursive;
     font-size: 120%;
 }
 .trait1menu4
