--- a/style.css
+++ b/style.css
@@ -308,6 +308,14 @@ article {
   justify-content: space-between;
 }
 
+.front134 {
+  font-family: "Farsan", cursive;
+}
+
+.front2 {
+  font-family: "Crimson Pro", serif;
+}
+
 /*--------------------MENU 1--------------------------
 -------------------------------------------------------
 -------------------------------------------------------
@@ -333,7 +341,6 @@ article {
 .titresousmenu1 {
   margin-top: -2px;
   color: #553d1e;
-  font-family: "Farsan", cursive;
   background: linear-gradient(to top, #553d1e 2px, transparent 3px) no-repeat;
   background-size: 0 100%;
   transition: background-size 0.3s;
@@ -356,7 +363,6 @@ article {
 .colortextmenu1 {
   color: #553d1e;
   font-size: 120%;
-  font-family: "Farsan", cursive;
 }
 
 /*-----Footer-----*/
@@ -403,7 +409,6 @@ article {
 .titresousmenu2- {
   margin-top: -2px;
   color: #f3b42b;
-  font-family: "Crimson Pro", serif;
   background: linear-gradient(to top, #f3b42b 2px, transparent 3px) no-repeat;
   background-size: 0 100%;
   transition: background-size 0.3s;
@@ -416,7 +421,6 @@ article {
 .titresousmenu2-- {
   margin-top: -2px;
   color: #9352e7;
-  font-family: "Crimson Pro", serif;
   background: linear-gradient(to top, #9352e7 2px, transparent 3px) no-repeat;
   background-size: 0 100%;
   transition: background-size 0.3s;
@@ -429,7 +433,6 @@ article {
 .titresousmenu2--- {
   margin-top: -2px;
   color: #4e43e9;
-  font-family: "Crimson Pro", serif;
   background: linear-gradient(to top, #4e43e9 2px, transparent 3px) no-repeat;
   background-size: 0 100%;
   transition: background-size 0.3s;
@@ -441,17 +444,14 @@ article {
 
 .colortext1menu2 {
   color: #f3b42b;
-  font-family: "Crimson Pro", serif;
 }
 
 .colortext2menu2 {
   color: #9352e7;
-  font-family: "Crimson Pro", serif;
 }
 
 .colortext3menu2 {
   color: #4e43e9;
-  font-family: "Crimson Pro", serif;
 }
 
 .trait1menu2- {
@@ -512,7 +512,6 @@ article {
 /*-----BODY-----*/
 .titresousmenu3- {
   margin-top: 3px;
-  font-family: "Farsan", cursive;
   background: linear-gradient(to top, #211ee4 2px, transparent 3px) no-repeat;
   background-size: 0 100%;
   transition: background-size 0.3s;
@@ -524,7 +523,6 @@ article {
 
 .titresousmenu3-- {
   margin-top: 3px;
-  font-family: "Farsan", cursive;
   background: linear-gradient(to top, #3f81fc 2px, transparent 3px) no-repeat;
   background-size: 0 100%;
   transition: background-size 0.3s;
@@ -536,7 +534,6 @@ article {
 
 .titresousmenu3--- {
   margin-top: 3px;
-  font-family: "Farsan", cursive;
   background: linear-gradient(to top, #3fc0fc 2px, transparent 3px) no-repeat;
   background-size: 0 100%;
   transition: background-size 0.3s;
@@ -547,7 +544,6 @@ article {
 }
 
 .colortextemenu3 {
-  font-family: "Farsan", cursive;
   font-size: 120%;
 }
 
@@ -607,7 +603,6 @@ article {
 /*-----BODY-----*/
 .titresousmenu4 {
   margin-top: 0px;
-  font-family: "Farsan", cursive;
   background: linear-gradient(to top, #61af34 2px, transparent 3px) no-repeat;
   background-size: 0 100%;
   transition: background-size 0.3s;
@@ -618,7 +613,6 @@ article {
 }
 
 .colortextemenu4 {
-  font-family: "Farsan", cursive;
   font-size: 120%;
 }
 
